Документировать параметры конфигурации

--- a/totetris.ini
+++ b/totetris.ini
@@ -1,7 +1,12 @@
 [game]
+; ширина игрового поля в клетках
 width = 20
+; высота игрового поля в клетках
 height = 30
+; длительность тика в миллисекундах
 tick_ms = 500
+; обратный отсчёт перед стартом в секундах
 countdown = 5
+; продолжительность матча в секундах
 game_duration = 300
 
