--- a/totetris.ini
+++ b/totetris.ini
@@ -9,4 +9,6 @@ tick_ms = 500
 countdown = 5
 ; продолжительность матча в секундах
 game_duration = 300
+; заканчивать ли игру, если один из игроков переполнит стакан
+overflow_ends_game = false
 
