Add config flag for ending on negative score

--- a/totetris.ini
+++ b/totetris.ini
@@ -9,3 +9,5 @@ tick_ms = 500
 countdown = 5
 ; продолжительность матча в секундах
 game_duration = 300
+; завершать ли игру при отрицательном счёте у одного из игроков
+end_on_negative_score = true
